--- a/java-maven-helloworld/pom.xml
+++ b/java-maven-helloworld/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.julia</groupId>
-    <artifactId>maven-helloworld</artifactId>
+    <artifactId>java-maven-helloworld</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <description>Maven hello world</description>
