--- a/java-maven-helloworld/module-1/pom.xml
+++ b/java-maven-helloworld/module-1/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>ru.julia</groupId>
-        <artifactId>maven-helloworld</artifactId>
+        <artifactId>java-maven-helloworld</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
