add noSql db (mondodb and mongodb reactive)

--- a/java-noSql-db/docker-compose.yml
+++ b/java-noSql-db/docker-compose.yml
@@ -1,4 +1,48 @@
 services:
+  mongo1:
+    hostname: mongo1
+    container_name: localmongo1
+    image: mongo:5.0
+    expose:
+      - 27017
+    ports:
+      - 30001:27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
+
+  mongo2:
+    hostname: mongo2
+    container_name: localmongo2
+    image: mongo:5.0
+    expose:
+      - 27017
+    ports:
+      - 30002:27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
+
+  mongo3:
+    hostname: mongo3
+    container_name: localmongo3
+    image: mongo:5.0
+    expose:
+      - 27017
+    ports:
+      - 30003:27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
+
+  mongosetup:
+    image: mongo:5.0
+    depends_on:
+      - mongo1
+      - mongo2
+      - mongo3
+    volumes:
+      - ./scripts:/scripts
+    restart: "no"
+    entrypoint: [ "bash", "/scripts/mongo_setup.sh"]
+
   cassandra:
     image: cassandra:latest
     ports:
