--- a/java-spring-context/gradle.properties
+++ b/java-spring-context/gradle.properties
@@ -10,6 +10,7 @@ johnrengelmanShadow=8.1.1
 protobufVer=0.9.4
 sonarlint=4.1.0
 spotless=6.25.0
+jib=3.4.1
 # -------Versions--------
 testcontainersBom=1.19.7
 protobufBom=4.26.1
